Fixed icon spacing in the navbar.

--- a/pyconca/static/pyconca.css
+++ b/pyconca/static/pyconca.css
@@ -14,6 +14,10 @@ a:hover {
   margin: auto;
 }
 
+.nav-icon {
+  margin-right: 5px;
+}
+
 .main-body {
   background-color: #B52A2A;
 }
